private-dormitory/force-app/main/default/objects/Booking__c/fields/Resident__c.field-meta.xml
<CustomField>
    <fullName>Resident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The resident who lives in the Room.</description>
    <label>Resident</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>