private-dormitory/force-app/main/default/objects/Booking__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <description>The Room where the Resident lives in.</description>
    <label>Room</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>