private-dormitory/force-app/main/default/objects/Booking__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The date when the booking begins.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>