private-dormitory/force-app/main/default/objects/Booking__c/validationRules/Prevent_Booking_If_Room_Needs_Maintenanc.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Booking_If_Room_Needs_Maintenanc</fullName>
    <active>true</active>
    <errorConditionFormula>Room__r.Needs_Maintenance__c = TRUE</errorConditionFormula>
    <errorDisplayField>Room__c</errorDisplayField>
    <errorMessage>This room is currently unavailable for booking. 
It has been marked as requiring maintenance. 
Please select a different room or contact the administrator.</errorMessage>
</ValidationRule>